grammar.js
        source_file: $ => repeat($._stm),

        _stm: $ => choice(
            $._expression_stm,
            $._declaration_stm
        ),

        empty_stm: $ => ';',

        _declaration_stm: $ => choice(
            $.static_item,
            $.const_item,
            $.macro_invoc,
            $.macro_def,
            $.outer_attribute_item,
            $.inner_attribute_item,
            $.mod_item,
            $.foreign_mod_item,
            $.union_item,
            $.struct_item,
            $.enum_item,
            $.type_item,
            $.function_item,
            $.function_no_body_item,
            $.trait_item,
            $.impl_item,
            $.associated_type,
            $.let_declaration,
            $.use_declaration,
            $.extern_crate_declaration,
            $.empty_stm
        ),

        _tokens_macro_invoc: $ => choice(
            $.token_tree,       // tokens delimiters (),[],{}
            $.token_rep,        // tokens rep {$A: ty, $B: tx ...}
            $._token_content    // identifier / reserved words
        ),

        token_tree: $ => choice(
            seq('(', repeat($._tokens_macro_invoc), ')'),
            seq('[', repeat($._tokens_macro_invoc), ']'),
            seq('{', repeat($._tokens_macro_invoc), '}')
        ),

        outer_attribute_item: $ => seq(
            '#', '[', $.meta_item, ']'
        ),

        inner_attribute_item: $ => seq(
            '#', '!', '[', $.meta_item, ']'
        ),

        meta_item: $ => seq(
            $._path,
            optional(choice(
                seq('=', field('variable', $._literal)),
                field('list', $.meta_seq)
            ))
        ),

        meta_seq: $ => seq(
            '(',
            optional(sepRepInstru(',', choice($.meta_item, $._literal))),
            optional(','),
            ')'
        ),

        mod_item: $ => seq(
            optional($.privacy_visibility),
            'mod',
            field('name', $.identifier),
            choice(
                ';',
                field('body', $.declaration_list)
            )
        ),

        foreign_mod_item: $ => seq(
            optional($.privacy_visibility),
            $.extern_modifier, // extern modifier
            choice(
                ';',
                field('body', $.declaration_list)
            )
        ),

        declaration_list: $ => seq(
            '{', $._declaration_stm, '}'
        ),

        struct_item: $ => seq(
            optional($.privacy_visibility),
            'struct',
            field('name', $._type_identifier),
            field('type parameters', optional($.type_parameters)),
            choice(
                seq(
                    optional($.where_clause),
                    field('body', $.struct_field)
                ),
                seq(
                    field('body', $.tuple_field),  //aka ordered_field_declaration_list
                    optional($.where_clause),
                    ';'
                ),
                ';'
            )
        ),

        union_item: $ => seq(
            optional($.privacy_visibility),
            'union',
            field('name', $._type_identifier),
            field('type parameters', optional($.type_parameters)),
            optional($.where_clause),
            field('body', $.struct_field)
        ),

        enum_item: $ => seq(
            optional($.privacy_visibility),
            'enum',
            field('name', $._type_identifier),
            field('type parameters', $.type_parameters),
            optional($.where_clause),
            field('body', $.enum_body)
        ),

        enum_body: $ => seq(
            '{',
            optional(sepRepInstru(',', seq(repeat($.outer_attribute_item), $.enum_content))),
            optional(','),
            '}'
        ),

        enum_content: $ => seq(
            optional($.privacy_visibility),
            field('name', $.identifier),
            field('body', optional(choice(
                $.struct_field,
                $.tuple_field
            ))),
            optional(seq(
                '=', field('value', $._expression)
            ))
        ),

        struct_field: $ => seq(
            '{',
            optional(sepRepInstru(',', seq(
                repeat($.outer_attribute_item),
                optional($.privacy_visibility),
                field('name', $.identifier),
                ':',
                field('type', $._type)
            ))),
            optional(','),
            '}'
        ),

        tuple_field: $ => seq(
            '(',
            optional(sepRepInstru(',', seq(
                repeat($.outer_attribute_item),
                optional($.privacy_visibility),
                field('type', $._type)
            ))),
            optional(','),
            ')'
        ),

        extern_crate_declaration: $ => seq(
            optional($.privacy_visibility),
            'extern',
            $.crate,
            field('name', $.identifier),
            optional(seq('as', field('alias', $.identifier))),
            ';'
        ),

        const_item: $ => seq(
            optional($.privacy_visibility),
            'const',
            field('name', choice(
                '_',
                $.identifier
            )),
            ':',
            field('type', $._type),
            optional(seq(
                '=',
                field('value', $._expression)
            )),
            ';'
        ),

        static_item: $ => seq(
            optional($.privacy_visibility),
            'static',
            optional($.mutable_spec),
            field('name', $.identifier),
            ':',
            field('type', $._type),
            optional(seq(
                '=',
                field('value', $._expression)
            )),
            ';'
        ),

        type_item: $ => seq(
            optional($.privacy_visibility),
            'type',
            field('name', $._type_identifier),
            field('type parameters', optional($.type_parameters)),
            optional($.where_clause),
            '=',
            field('type', $._type),
            ';'
        ),

        function_item: $ => seq(
            optional($.privacy_visibility),
            optional($.function_qualifiers),
            'fn',
            field('name', choice($.identifier, $.metavariable)),
            field('type parameters', optional($.type_parameters)),
            field('parameters', $.parameters),
            optional(seq('->', field('return', $._type))),
            optional($.where_clause),
            field('body', $.block)
        ),

        function_no_body_item: $ => seq(
            optional($.privacy_visibility),
            optional($.function_qualifiers),
            'fn',
            field('name', choice($.identifier, $.metavariable)),
            field('type parameters', optional($.type_parameters)),
            field('parameters', $.parameters),
            optional(seq('->', field('return', $._type))),
            optional($.where_clause),
            ';'
        ),

        function_qualifiers: $ => repeat1(choice(
            'async',
            'const',
            'unsafe',
            'default',
            $.extern_modifier
        )),

        where_clause: $ => seq(
            'where',
            sepRepInstru(',', $.where_clause_item),
            optional(',')
        ),

        impl_item: $ => seq(
            optional('unsafe'),
            'impl',
            field('type_parameters', optional($.type_parameters)),
            optional(seq(
                field('trait', choice(
                    $._type_identifier,
                    $.scoped_type_identifier,
                    $.generic_type
                )),
                'for',
            )),
            field('type', $._type),
            optional($.where_clause),
            field('body', $.declaration_list)
        ),

        trait_item: $ => seq(
            optional($.privacy_visibility),
            optional('unsafe'),
            'trait',
            field('name', $._type_identifier),
            field('type_parameters', optional($.type_parameters)),
            field('bounds', optional($.trait_bounds)),
            optional($.where_clause),
            field('body', $.declaration_list)
        ),

        associated_type: $ => seq(
            'type',
            field('name', $._type_identifier),
            field('trait', optional($.trait_bounds)),
            ';'
        ),

        trait_bounds: $ => seq(
            ':',
            sepRepInstru('+', choice(
                $._type,
                $.lifetime,
                $.higher_ranked_trait_bound,     // $.higher_ranked_trait_bound
                $.sized_trait_bound             // $.sized_trait_bound
            )),
        ),

        higher_ranked_trait_bound: $ => seq(
            'for',
            field('type_parameters', $.type_parameters),
            field('type', $._type)
        ),

        sized_trait_bound: $ => seq('?', $._type),

        type_parameters: $ => prec(1, seq(
            '<',
            sepRepInstru(',', choice(
                $.lifetime,
                $.metavariable,
                $.constrained_type_parameter,
                $.other_type_parameter,
                $.const_parameter,
                $._type_identifier
            )),
            optional(','),
            '>'
        )),

        const_parameter: $ => seq(
            'const',
            field('name', $.identifier),
            ':',
            field('type', $._type)
        ),

        constrained_type_parameter: $ => seq(
            field('name', choice($.lifetime, $._type_identifier)),
            field('bounds', $.trait_bounds)
        ),

        let_declaration: $ => seq(
            optional($.privacy_visibility),
            'let',
            optional($.mutable_spec),
            field('pattern', $._pattern),
            optional(seq(
                ':', field('type', $._type)
            )),
            optional(seq(
                '=', field('value', $._expression)
            )),
            ';'
        ),

        use_declaration: $ => seq(
            optional($.privacy_visibility),
            'use',
            field('useTree', $._use_tree),
            ';'
        ),

        _use_tree: $ => choice(
            $._path,            // SimplePath
            $.use_wildcard,     // (SimplePath? ::?) *
            $.scope_use_list,   // (SimplePath? ::)? { (UseTree ( , UseTree )* ,?)? }
            $.use_as,           // SimplePath(as(IDENTIFIER | _)) ?
            $.use_list          // { (UseTree ( , UseTree )* ,?)? }
        ),

        scope_use_list: $ => seq(
            field('path', optional($._path)),
            '::',
            field('list', $.use_list)
        ),

        use_list: $ => seq(
            '{',
            optional(sepRepInstru(',', choice($._use_tree))),
            optional(','),
            '}'
        ),

        use_as: $ => seq(field('path', $._path), 'as', field('alias', $.identifier)),

        use_wildcard: $ => seq(optional(seq($._path, '::')), '*'),

        parameters: $ => seq(
            '(',
            optional(sepRepInstru(',', seq(
                optional($.outer_attribute_item),
                choice(
                    $.parameter,
                    $.self_parameter,
                    '...',
                    '_',
                    $._type
                )
            ))),
            optional(','),
            ')'
        ),

        self_parameter: $ => seq(
            optional('&'),
            optional($.lifetime),
            optional($.mutable_spec),
            $.self
        ),

        parameter: $ => seq(
            optional($.mutable_spec),
            field('pattern', choice(
                $._pattern,
                $.self,
                $._reserved_identifier
            )),
            ':',
            field('type', $._type)
        ),

        extern_modifier: $ => seq(
            'extern',
            optional($.string_lit)
        ),

        privacy_visibility: $ => prec.right(
            choice(
                $.crate,
                seq(
                    'pub',
                    optional(seq(
                        '(',
                        choice(
                            $.crate,
                            $.self,
                            $.super,
                            seq('in', $._path)
                        ),
                        ')',
                    ))
                )
            )
        ),

        _type: $ => choice(
            $.abstract_type,                // abstract type
            $.reference_pointer_type,       // reference type
            $.raw_pointer_type,             // pointer type
            $.array_type,                    // array type
            $.function_type,                 // function type
            $.dynamic_type,                 // dynamic type
            $.bounded_type,                 // bounded type
            $.metavariable,
            $._type_identifier,
            $.never_type,
            $.tuple_type,
            $.unit_type,
            $.macro_invoc,
            $.generic_type,
            $.scoped_type_identifier,
            alias(choice(...data_types), $.prim_data_type)
        ),

        lifetime: $ => seq('"', $.identifier),

        array_type: $ => seq(
            '[',
            field('type', $._type),
            optional(seq(
                ';', field('size', $._expression)
            )),
            ']'
        ),

        function_type: $ => seq(
            optional($.for_lifetime),
            prec(14, seq(
                choice(
                    field('trait', choice(
                        $._type_identifier,
                        $.scoped_type_identifier
                    )),
                    seq(
                        optional($.function_qualifiers),
                        'fn'
                    )
                ),
                field('parameters', $.parameters)
            )),
            optional(seq('->', field('return_type', $._type)))
        ),

        tuple_type: $ => seq(
            '(',
            sepRepInstru(',', $._type),
            optional(','),
            ')'
        ),

        generic_type: $ => prec(1, seq(
            field('type', choice(
                $._type_identifier,
                $.scoped_type_identifier
            )),
            field('type arguments', $.type_args)
        )),

        type_args: $ => seq(
            token(prec(1, '<')),
            sepRepInstru(',', choice(
                $._type,
                $.lifetime,
                $._literal,
                $.bind_type,
                $.block         // block
            )),
            optional(','),
            '>'
        ),

        bind_type: $ => seq(
            field('name', $._type_identifier),
            '=',
            field('type', $._type)
        ),

        never_type: $ => '!',

        abstract_type: $ => seq(
            'impl',
            field('trait', choice(
                $._type_identifier,
                $.scoped_type_identifier,
                $.function_type, //function type
                $.generic_type
            ))
        ),

        macro_invoc: $ => seq(
            field('macro', choice(
                $.identifier,
                $.scoped_identifier     // scoped ident
            )),
            '!',
            $.token_tree
        ),

        scoped_identifier: $ => seq(
            field('path', optional(choice(
                $._path,
                $.bracket_type,
                alias($.generic_type_turbofish, $.generic_type)
            ))),
            '::',
            field('name', $.identifier)
        ),

        return_expression: $ => choice(
            prec.left(seq('return', $._expression)),
            prec(-1, 'return')
        ),
