corpus/Declarations.txt
============================================
Modules
============================================

mod english;

mod english {}

mod english {
    mod greetings {}
    mod farewells {}
}

pub mod english;

---

(source_file
  (mod_item (identifier))
  (mod_item (identifier) (declaration_list))
  (mod_item (identifier) (declaration_list
    (mod_item (identifier) (declaration_list))
    (mod_item (identifier) (declaration_list))))
  (mod_item (privacy_visibility) (identifier)))

============================================
Extern crate declarations
============================================

extern crate std;
extern crate std as ruststd;
pub extern crate futures;

---

(source_file
  (extern_crate_declaration (crate) (identifier))
  (extern_crate_declaration (crate) (identifier) (identifier))
  (extern_crate_declaration (privacy_visibility) (crate) (identifier)))

============================================
Function declarations
============================================

fn main() {}

fn add(x: i32, y: i32) -> i32 {
    return x + y;
}

fn takes_slice(slice: &str) {
    println!("Got: {}", slice);
}

fn foo() -> [u32; 2] {
    return [1, 2];
}

fn foo() -> (u32, u16) {
    return (1, 2);
}

fn foo() {
    return
}

fn foo(x: impl FnOnce() -> result::Result<T, E>) {}

fn foo(#[attr] x: i32, #[attr] x: i64) {}

fn accumulate(self) -> Machine<{State::Accumulate}> {}

---

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters)
    body: (block))
  (function_item
    name: (identifier)
    parameters: (parameters
      (parameter
        pattern: (identifier)
        type: (primitive_type))
      (parameter
        pattern: (identifier)
        type: (primitive_type)))
    return_type: (primitive_type)
    body: (block
      (return_expression
        (binary_expression
          left: (identifier)
          right: (identifier)))))
  (function_item
    name: (identifier)
    parameters: (parameters
      (parameter
        pattern: (identifier)
        type: (reference_type
          type: (primitive_type))))
    body: (block
      (macro_invoc
        macro: (identifier)
        (token_tree
          (string_lit)
          (identifier)))))
  (function_item
    name: (identifier)
    parameters: (parameters)
    return_type: (array_type
      element: (primitive_type)
      size: (integer_lit))
    body: (block
      (return_expression
        (array_expression
          (integer_lit)
          (integer_lit)))))
  (function_item
    name: (identifier)
    parameters: (parameters)
    return_type: (tuple_type
      (primitive_type)
      (primitive_type))
    body: (block
      (return_expression
        (tuple_expression
          (integer_lit)
          (integer_lit)))))
  (function_item
    name: (identifier)
    parameters: (parameters)
    body: (block
      (return_expression)))
  (function_item
    name: (identifier)
    parameters: (parameters
      (parameter
        pattern: (identifier)
        type: (abstract_type
          trait: (function_type
            trait: (type_identifier)
            parameters: (parameters)
            return_type: (generic_type
              type: (scoped_type_identifier
                path: (identifier)
                name: (type_identifier))
              type_arguments: (type_args
                (type_identifier)
                (type_identifier)))))))
    body: (block))
  (function_item
    name: (identifier)
    parameters: (parameters
      (outer_attribute_item
        (meta_item
          (identifier)))
      (parameter
        pattern: (identifier)
        type: (primitive_type))
      (outer_attribute_item
        (meta_item
          (identifier)))
      (parameter
        pattern: (identifier)
        type: (primitive_type)))
    body: (block))
  (function_item
    name: (identifier)
    parameters: (parameters
      (self_parameter
        (self)))
    return_type: (generic_type
      type: (type_identifier)
      type_arguments: (type_args
        (block
          (scoped_identifier
            path: (identifier)
            name: (identifier)))))
    body: (block)))

============================================
Const function declarations
============================================

const fn main() {}

---

(source_file
  (function_item (function_qualifiers) (identifier) (parameters) (block)))

============================================
Functions with abstract return types
============================================

fn triples(a: impl B) -> impl Iterator<Item=(usize)> {
}

---

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (identifier)
        (abstract_type (type_identifier))))
    (abstract_type (generic_type
      (type_identifier)
      (type_args (bind_type (type_identifier) (tuple_type (primitive_type))))))
    (block)))

============================================
Diverging functions
============================================

fn aborts() -> ! {
}

---

(source_file
  (function_item
    (identifier)
    (parameters)
    (never_type)
    (block)))

============================================
Extern function declarations
============================================

extern "C" fn foo() {}
extern "C" fn printf(
    *const c_char,
    ...,
) {}

---

(source_file
  (function_item
    (function_qualifiers (extern_modifier (string_lit)))
    (identifier)
    (parameters)
    (block))
  (function_item
    (function_qualifiers (extern_modifier (string_lit)))
    (identifier)
    (parameters (pointer_type (type_identifier)) (variadic_parameter))
    (block)))

============================================
Use declarations
============================================

use abc;
use phrases::japanese;
use sayings::english::greetings;
use sayings::english::greetings as en_greetings ;
use phrases::english::{greetings,farewells};
use sayings::japanese::farewells::*;
pub use self::greetings::hello;
use sayings::english::{self, greetings as en_greetings, farewells as en_farewells};
use three::{ dot::{one, four} };
use my::{ some::* };
use my::{*};

---

(source_file
  (use_declaration
    useTree: (identifier))
  (use_declaration
    useTree: (scoped_identifier
      path: (identifier)
      name: (identifier)))
  (use_declaration
    useTree: (scoped_identifier
      path: (scoped_identifier
        path: (identifier)
        name: (identifier))
      name: (identifier)))
  (use_declaration
    useTree: (use_as
      path: (scoped_identifier
        path: (scoped_identifier
          path: (identifier)
          name: (identifier))
        name: (identifier))
      alias: (identifier)))
  (use_declaration
    useTree: (scope_use_list
      path: (scoped_identifier
        path: (identifier)
        name: (identifier))
      list: (use_list
        (identifier)
        (identifier))))
  (use_declaration
    useTree: (use_wildcard
      (scoped_identifier
        path: (scoped_identifier
          path: (identifier)
          name: (identifier))
        name: (identifier))))
  (use_declaration
    (privacy_visibility)
    useTree: (scoped_identifier
      path: (scoped_identifier
        path: (self)
        name: (identifier))
      name: (identifier)))
  (use_declaration
    useTree: (scope_use_list
      path: (scoped_identifier
        path: (identifier)
        name: (identifier))
      list: (use_list
        (self)
        (use_as
          path: (identifier)
          alias: (identifier))
        (use_as
          path: (identifier)
          alias: (identifier)))))
  (use_declaration
    useTree: (scope_use_list
      path: (identifier)
      list: (use_list
        (scope_use_list
          path: (identifier)
          list: (use_list
            (identifier)
            (identifier))))))
  (use_declaration
    useTree: (scope_use_list
      path: (identifier)
      list: (use_list
        (use_wildcard
          (identifier)))))
  (use_declaration
    useTree: (scope_use_list
      path: (identifier)
      list: (use_list
        (use_wildcard)))))

============================================
Variable bindings
============================================

let x;
let x = 42;
let x: i32;
let x: i8 = 42;
let mut x = 5;
let y: bool = false;
let bool: bool = false;
let u32: str = "";

---

(source_file
  (let_declaration (identifier))
  (let_declaration (identifier) (integer_lit))
  (let_declaration (identifier) (primitive_type))
  (let_declaration (identifier) (primitive_type) (integer_lit))
  (let_declaration (mutable_specifier) (identifier) (integer_lit))
  (let_declaration (identifier) (primitive_type) (boolean_lit))
  (let_declaration (identifier) (primitive_type) (boolean_lit))
  (let_declaration (identifier) (primitive_type) (string_lit)))

============================================
Structs
============================================

struct Proton;
struct Electron {}
struct Person {pub name: String, pub age: u32}
struct Point {
  x: i32,

  #[attribute1]
  y: i32,
}
struct Color(pub i32, i32, i32);
struct Inches(i32);

---

(source_file 
		(struct_item (type_identifier)) 
		(struct_item (type_identifier) (struct_field))
		(struct_item (type_identifier) 
			(struct_field (privacy_visibility) (field_identifier) (type_identifier) 
						  (privacy_visibility) (field_identifier) (primitive_type)))
		(struct_item (type_identifier) 
			(struct_field (field_identifier) (primitive_type)
						  (outer_attribute_item (meta_item (identifier))) 
						  (field_identifier) (primitive_type)))
		(struct_item (type_identifier) 
			(tuple_field (privacy_visibility) (primitive_type) (primitive_type) (primitive_type))) 
		(struct_item (type_identifier) (tuple_field (primitive_type))))

============================================
Unions
============================================

pub union in6_addr__bindgen_ty_1 {
    pub __u6_addr8: [__uint8_t; 16usize],
    pub __u6_addr16: [__uint16_t; 8usize],
    pub __u6_addr32: [__uint32_t; 4usize],
    _bindgen_union_align: [u32; 4usize],
}

---

(source_file 
	(union_item (privacy_visibility) (type_identifier) 
		(struct_field 
			(privacy_visibility) (field_identifier) (array_type (type_identifier) (integer_lit))
			(privacy_visibility) (field_identifier) (array_type (type_identifier) (integer_lit))
			(privacy_visibility) (field_identifier) (array_type (type_identifier) (integer_lit))
			(field_identifier) (array_type (primitive_type) (integer_lit)))))

============================================
Generic structs
============================================

struct A<B> {}
struct C<'a, 'b> {}
struct C<'a,> {}
struct D<const SIZE: usize> {}

---

(source_file
  (struct_item
    name: (type_identifier)
    type_parameters: (type_parameters
      (type_identifier))
    body: (struct_field))
  (struct_item
    name: (type_identifier)
    type_parameters: (type_parameters
      (lifetime
        (identifier))
      (lifetime
        (identifier)))
    body: (struct_field))
  (struct_item
    name: (type_identifier)
    type_parameters: (type_parameters
      (lifetime
        (identifier)))
    body: (struct_field))
  (struct_item
    name: (type_identifier)
    type_parameters: (type_parameters
      (const_parameter
        name: (identifier)
        type: (primitive_type)))
    body: (struct_field)))

============================================
Enums
============================================

pub enum Option<T> {
    None,
    Some(T),
}

pub enum Node<T: Item> {
    Internal {
        children: Vec<Tree<T>>,
        height: u16
    },
    #[attribute1]
    #[attribute2]
    Leaf {
        value: T
    }
}

---

(source_file 
	(enum_item (privacy_visibility) (type_identifier) (type_parameters (type_identifier)) 
		(enum_body 
			(enum_content (identifier)) 
			(enum_content (identifier) (tuple_field (type_identifier))))) 
				(enum_item (privacy_visibility) (type_identifier) 
					(type_parameters (constrained_type_parameter (type_identifier) (trait_bounds (type_identifier)))) 
		(enum_body 
			(enum_content (identifier) 
				(struct_field (field_identifier) 
					(generic_type (type_identifier) 
						(type_args (generic_type (type_identifier) 
						(type_args (type_identifier)))))
				(field_identifier) (primitive_type)))
			(outer_attribute_item (meta_item (identifier))) 
			(outer_attribute_item (meta_item (identifier))) 
			(enum_content (identifier) 
				(struct_field (field_identifier) (type_identifier))))))

============================================
Enums with values specified
============================================

pub enum c_style_enum {
    val1 = 1,
    val2 = 2
}

---

(source_file
  (enum_item
    (privacy_visibility)
    (type_identifier)
    (enum_body
      (enum_content (identifier) (integer_lit))
      (enum_content (identifier) (integer_lit)))))

============================================
Generic functions
============================================

pub fn splice<T: Into<Text>>(&mut self, old_range: Range<usize>, new_text: T) {
}
pub fn uninit_array<const LEN: usize>() -> [Self; LEN] {}

---

(source_file
  (function_item
    (privacy_visibility)
    name: (identifier)
    type_parameters: (type_parameters
      (constrained_type_parameter
        left: (type_identifier)
        bounds: (trait_bounds
          (generic_type
            type: (type_identifier)
            type_arguments: (type_args
              (type_identifier))))))
    parameters: (parameters
      (self_parameter
        (mutable_specifier)
        (self))
      (parameter
        pattern: (identifier)
        type: (generic_type
          type: (type_identifier)
          type_arguments: (type_args
            (primitive_type))))
      (parameter
        pattern: (identifier)
        type: (type_identifier)))
    body: (block))
  (function_item
    (privacy_visibility)
    name: (identifier)
    type_parameters: (type_parameters
      (const_parameter
        name: (identifier)
        type: (primitive_type)))
    parameters: (parameters)
    return_type: (array_type
      element: (type_identifier)
      size: (identifier))
    body: (block)))

============================================
Functions with mutable parameters
============================================

fn foo(mut x : u32) {
}

---

(source_file
  (function_item
    (identifier)
    (parameters (parameter (mutable_specifier) (identifier) (primitive_type)))
    (block)))

============================================
Functions with destructured parameters
============================================

fn f1([x, y]: [u32; 2]) {}
fn f2(&x: &Y) {}
fn f3((x, y): (T, U)) {}

---

(source_file
  (function_item
    (identifier)
    (parameters
      (parameter
        (slice_pattern (identifier) (identifier))
        (array_type (primitive_type) (integer_lit))))
    (block))
  (function_item
    (identifier)
    (parameters
      (parameter
        (reference_pattern (identifier))
        (reference_type (type_identifier))))
    (block))
  (function_item
    (identifier)
    (parameters
      (parameter
        (tuple_pattern (identifier) (identifier))
        (tuple_type (type_identifier) (type_identifier))))
    (block)))

============================================
Functions with custom types for self
============================================

trait Callback {
    fn call(self: Box<Self>);
}

---

(source_file
  (trait_item
    (type_identifier)
    (declaration_list
      (function_no_body_item
        (identifier)
        (parameters
          (parameter
            (self)
            (generic_type (type_identifier) (type_args (type_identifier)))))))))

============================================
Constant items
============================================

const N: i32 = 5;

trait Foo {
    const X: u8;
}

---

(source_file
  (const_item (identifier) (primitive_type) (integer_lit))
  (trait_item
    (type_identifier)
    (declaration_list (const_item (identifier) (primitive_type)))))

============================================
Static items
============================================

static N: i32 = 5;
static mut __progname: *mut ::c_char;

---

(source_file
  (static_item
    (identifier)
    (primitive_type)
    (integer_lit))
  (static_item
    (mutable_specifier)
    (identifier)
    (pointer_type (mutable_specifier) (scoped_type_identifier (type_identifier)))))

============================================
Type aliases
============================================

type Inch = u64;
type Name<T> = Vec<T>;

---

(source_file
  (type_item (type_identifier) (primitive_type))
  (type_item (type_identifier) (type_parameters (type_identifier)) (generic_type (type_identifier) (type_args (type_identifier)))))

============================================
Empty statements
============================================

fn main() {
    ;
}

---

(source_file
  (function_item (identifier) (parameters) (block
    (empty_stm))))

============================================
Attributes
============================================

#[test]
fn test_foo() {}

#[derive(Debug)]
struct Baz;

#[derive(Debug, Eq,)]
struct Foo;

#[cfg(target_os = "macos")]
mod macos_only {}

#![allow(clippy::useless_transmute)]

#[clippy::cyclomatic_complexity = "100"]

---

(source_file
  (outer_attribute_item (meta_item (identifier)))
  (function_item
    name: (identifier)
    parameters: (parameters)
    body: (block))

  (outer_attribute_item (meta_item
    (identifier)
    list: (meta_seq (meta_item (identifier)))))
  (struct_item name: (type_identifier))

  (outer_attribute_item (meta_item
    (identifier)
    list: (meta_seq
      (meta_item (identifier))
      (meta_item (identifier)))))
  (struct_item name: (type_identifier))

  (outer_attribute_item (meta_item
    (identifier)
    list: (meta_seq
      (meta_item
        (identifier)
        value: (string_lit)))))
  (mod_item
    name: (identifier)
    body: (declaration_list))

  (inner_attribute_item (meta_item
    (identifier)
    list: (meta_seq (meta_item
      (scoped_identifier
        path: (identifier)
        name: (identifier))))))

  (outer_attribute_item (meta_item
    (scoped_identifier
      path: (identifier)
      name: (identifier))
    value: (string_lit))))

============================================
Inner attributes
============================================

mod macos_only {
  #![cfg(target_os = "macos")]
}

---

(source_file
  (mod_item
    name: (identifier)
    body: (declaration_list
      (inner_attribute_item (meta_item
        (identifier)
        list: (meta_seq (meta_item
          (identifier)
          value: (string_lit))))))))

============================================
Attributes and Expressions
============================================

fn foo() {
   bar(x,
       #[cfg(foo = "bar")]
       y);
   let z = [#[hello] 2, 7, 8];
   let t = (#[hello] 2, 7, 8);
}

---

(source_file
  (function_item
    name: (identifier)
    parameters: (parameters)
    body: (block
      (call_expression
        function: (identifier)
        arguments: (arguments
          (identifier)
            (outer_attribute_item (meta_item
              (identifier)
              list: (meta_seq (meta_item
                (identifier)
                value: (string_lit)))))
            (identifier)))
      (let_declaration
        pattern: (identifier)
        value: (array_expression
          (outer_attribute_item (meta_item (identifier)))
          (integer_lit)
          (integer_lit)
          (integer_lit)))
      (let_declaration
        pattern: (identifier)
        value: (tuple_expression
          (outer_attribute_item (meta_item (identifier)))
          (integer_lit)
          (integer_lit)
          (integer_lit))))))

===========================================
Inherent Impls
===========================================

impl Person {
  const leg_count : u32 = 2;

  fn walk(self) {}
  fn walk_mut(mut self) {}
  fn talk(& self) {}
  fn talk_mut(&'a mut self) {}
}

impl Machine<{State::Init}> {}

---

(source_file
  (impl_item
    type: (type_identifier)
    body: (declaration_list
      (const_item
        name: (identifier)
        type: (primitive_type)
        value: (integer_lit))
      (function_item
        name: (identifier)
        parameters: (parameters
          (self_parameter
            (self)))
        body: (block))
      (function_item
        name: (identifier)
        parameters: (parameters
          (self_parameter
            (mutable_specifier)
            (self)))
        body: (block))
      (function_item
        name: (identifier)
        parameters: (parameters
          (self_parameter
            (self)))
        body: (block))
      (function_item
        name: (identifier)
        parameters: (parameters
          (self_parameter
            (lifetime
              (identifier))
            (mutable_specifier)
            (self)))
        body: (block))))
  (impl_item
    type: (generic_type
      type: (type_identifier)
      type_arguments: (type_args
        (block
          (scoped_identifier
            path: (identifier)
            name: (identifier)))))
    body: (declaration_list)))

===========================================
Trait impls
===========================================

impl<'a> iter::Iterator for Self::Iter<'a> {
}

impl ConvertTo<i64> for i32 {
    fn convert(&self) -> i64 { *self as i64 }
}

---

(source_file
  (impl_item
    type_parameters: (type_parameters (lifetime (identifier)))
    trait: (scoped_type_identifier
      path: (identifier)
      name: (type_identifier))
    type: (generic_type
      type: (scoped_type_identifier
        path: (identifier)
        name: (type_identifier))
      type_arguments: (type_args (lifetime (identifier))))
    body: (declaration_list))
  (impl_item
    trait: (generic_type
      type: (type_identifier)
      type_arguments: (type_args (primitive_type)))
    type: (primitive_type)
    body: (declaration_list
      (function_item
        name: (identifier)
        parameters: (parameters (self_parameter (self)))
        return_type: (primitive_type)
        body: (block
          (type_cast_expression
            value: (unary_expression (self))
            type: (primitive_type)))))))

===========================================
Unsafe impls
===========================================

unsafe impl Foo {
}

---

(source_file (impl_item (type_identifier) (declaration_list)))

===========================================
Impls with default functions
===========================================

impl Foo {
  const default fn bar() -> i32 {
    // Make 'default' still works as an identifier
    default.bar();
  }
}

---

(source_file
  (impl_item (type_identifier) (declaration_list
    (function_item
      (function_qualifiers)
      (identifier)
      (parameters)
      (primitive_type)
      (block
        (line_comment)
        (call_expression
          (field_expression (identifier) (field_identifier))
          (arguments)))))))

============================================
Trait declarations
============================================

pub trait Item: Clone + Eq + fmt::Debug {
    fn summarize(&self) -> Self::Summary;
}

unsafe trait Foo { }

---

(source_file
  (trait_item
    (privacy_visibility)
    (type_identifier)
    (trait_bounds
      (type_identifier)
      (type_identifier)
      (scoped_type_identifier (identifier) (type_identifier)))
    (declaration_list
      (function_no_body_item
        (identifier)
        (parameters (self_parameter (self)))
        (scoped_type_identifier (identifier) (type_identifier)))))
   (trait_item (type_identifier) (declaration_list)))

============================================
Trait declarations with optional type parameters
============================================

trait Add<RHS=Self> {
    type Output;
    fn add(self, rhs: RHS) -> Self::Output;
}

---

(source_file
  (trait_item
    (type_identifier)
    (type_parameters (optional_type_parameter (type_identifier) (type_identifier)))
    (declaration_list
      (associated_type (type_identifier))
      (function_no_body_item
        (identifier)
        (parameters (self_parameter (self)) (parameter (identifier) (type_identifier)))
        (scoped_type_identifier (identifier) (type_identifier))))))

============================================
Unsized types in trait bounds
============================================

trait Foo<T: ?Sized> {
}

---

(source_file
  (trait_item
    (type_identifier)
    (type_parameters
      (constrained_type_parameter
        (type_identifier)
        (trait_bounds (sized_trait_bound (type_identifier)))))
    (declaration_list)))

============================================
Macro invocations inside trait declarations
============================================


pub trait A: B + C + D {
    private_decl!{}
    fn f(&self);
}

---

(source_file
  (trait_item
    (privacy_visibility)
    (type_identifier)
    (trait_bounds (type_identifier) (type_identifier) (type_identifier))
    (declaration_list
      (macro_invoc (identifier) (token_tree))
      (function_no_body_item (identifier) (parameters (self_parameter (self)))))))

============================================
Associated Types
============================================

pub trait Graph {
    type N: fmt::Display;
    type E;
}

---

(source_file
  (trait_item
    (privacy_visibility)
    (type_identifier)
    (declaration_list
      (associated_type (type_identifier) (trait_bounds (scoped_type_identifier (identifier) (type_identifier))))
      (associated_type (type_identifier)))))

=====================
Higher-ranked types
=====================

trait T: for<'a> AddAssign<&'a usize> {
}

---

(source_file
  (trait_item
    (type_identifier)
    (trait_bounds
      (higher_ranked_trait_bound
        (type_parameters (lifetime (identifier)))
        (generic_type (type_identifier) (type_args (reference_type (lifetime (identifier)) (primitive_type))))))
    (declaration_list)))

=====================
Visibility modifiers
=====================
